@@ -1,3 +1,8 @@
+2005-09-17  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (plot_image_or_update_axes): Use gp_alloc rather
+	than malloc. Bug #1254314.
+
 2005-09-16  Juergen Wieferink  <wieferink@freenet.de>
 
         * src/command.c (string_expand):  Fix bug in macro handling; escaped
